k8s/deployment.yml
kind: Deployment 
apiVersion: apps/v1
metadata: 
  name: django-deployment 
  namespace: django
  labels:
    app: django-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels: 
        app: django-app
    spec:
      containers:
      - name: django
        image: dattarahegaonkar09/django-app:latest
        ports:
        - containerPort: 8000
