k8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name: django-service
  namespace: django
  labels:
    app: django-app

spec:
  selector:
    app: django-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 31000
  type: NodePort
