k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  namespace: django
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: django.local
    http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 80
